# ai-pocs

anomaly-detection-system/: Cargo.toml
anomaly-detection-system/data/: generate_sample.py  sample_traffic.txt
anomaly-detection-system/src/: detector.rs  isolation_forest.rs  lib.rs  parser.rs  reporter.rs
autonomous-web-agent/src/: agent.rs  browser.rs  config.rs
chatbot-nlp/src/: conversation.rs  main.rs
first-mcp/: package-lock.json  package.json
genetic-algorithm-optimizer/: Cargo.toml
genetic-algorithm-optimizer/src/: engine.rs  genome.rs  main.rs  selection.rs  stats.rs
genetic-algorithm-optimizer/src/problems/: function_optimization.rs  knapsack.rs  mod.rs  tsp.rs
image-classification-cnn/: requirements.txt
image-classification-cnn/src/: augmentation.py  generate_dummy_dataset.py  model.py  predict.py  train.py
movie-recommendation-system/: Cargo.toml  README.md
movie-recommendation-system/src/: collaborative_filtering.rs  main.rs  sample_data.rs
price-prediction-system/: .gitignore  EXAMPLES.md  README.md  sample_data.csv
price-prediction-system/src/: data.rs
price-prediction-system/tests/: integration_test.rs
rag-engine/: Cargo.toml  README.md
rag-engine/src/: document.rs  embedder.rs  error.rs  index.rs  lib.rs  llm.rs  main.rs  store.rs
sentiment-analysis-api/: .gitignore  Dockerfile  README.md  requirements.txt
sentiment-analysis-api/app/: config.py  main.py
sentiment-analysis-api/app/service/: sentiment.py
sentiment-analysis-api/app/training/: train.py
sentiment-analysis-api/tests/: test_api.py
