[package]
name = "rag-engine"
version = "0.1.0"
edition = "2021"
description = "Local RAG (Retrieval-Augmented Generation) pipeline CLI tool"

[[bin]]
name = "rag"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
colored = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async + HTTP (for Claude API)
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Embeddings - ONNX Runtime
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
ndarray = "0.17"
tokenizers = "0.21"

# Vector search
instant-distance = "0.6"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Misc
uuid = { version = "1", features = ["v4"] }
